# tree-sitter-emmyluadoc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  test_output.txt  tree-sitter.json
.github/workflows/: test.yml
bindings/node/: binding.cc  index.js
bindings/python/: example.py
bindings/python/tree_sitter_emmyluadoc/: __init__.py  __init__.pyi  binding.c
bindings/rust/: example.rs  lib.rs
docs/: ENHANCEMENTS.md  LINE_START_DETECTION.md
examples/: example.lua  highlight_test.emmyluadoc  highlight_test_generics.emmyluadoc  lua_example.lua  lua_injections_example.scm  usage.js
queries/: highlights.scm  highlights.scm.bak  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: injection_test.lua  test_injection.js
test/corpus/: advanced_features.txt  basic.txt  description_edge_cases.txt  generics.txt  highlighting.txt  identifiers.txt  lua_comments.txt  multiple_returns_and_indexed_tables.txt  new_features.txt  other_annotation.txt  text_line_extra1.txt  text_line_extra2.txt  text_line_extra3.txt  text_line_extra4.txt  text_line_extra5.txt  text_line_test.txt  tuples.txt
