[package]
name = "tree-sitter-emmyluadoc"
description = "EmmyLua documentation grammar for tree-sitter"
version = "0.1.0"
keywords = ["incremental", "parsing", "emmylua", "lua"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/yourusername/tree-sitter-emmyluadoc"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"

[[example]]
name = "example"
path = "bindings/rust/example.rs"
